# pnotify

./: pnotify.cabal
csrc/: _unistd.c
include/: _unistd.h
src/System/: PNotify.hsc
test/: Main.hs
