Name:                pnotify
Version:             0.1.0.0
Synopsis:            A Haskell wrapper for the linux inotify API.
Description:
    Haskell wrapper for linux inotify API using a polling approach for
    event handling.
Homepage:            https://github.com/JavierJF/pnotify
License:             GPL-3
License-file:        LICENSE
Author:              Javier Jaramago Fernández
Maintainer:          jaramago.fernandez.javier@gmail.com
Category:            System
Build-Type:          Simple
Cabal-Version:       >=1.10

Source-Repository head
    type:       git
    location:   https://github.com/JavierJF/pnotify

library
  Exposed-Modules:
    System.INotify
  Build-Depends:       base >=4.8 && <4.9, unix
  Hs-Source-Dirs:      src
  Default-language:    Haskell2010
