Name:                pnotify
Version:             0.1.0.0
Synopsis:            A Haskell wrapper for the linux inotify API.
Description:
    Haskell wrapper for linux inotify API using a polling approach for
    event handling.
Homepage:            https://github.com/JavierJF/pnotify
License:             GPL-3
License-file:        LICENSE
Author:              Javier Jaramago Fernández
Maintainer:          jaramago.fernandez.javier@gmail.com
Category:            System
Build-Type:          Simple
Cabal-Version:       >=1.10

Source-Repository head
  Type:                 git
  Location:             https://github.com/JavierJF/pnotify

Library
  Exposed-Modules:      System.PNotify
  Default-Language:     Haskell2010
  Include-Dirs:         include
  C-Sources:            csrc/_unistd.c
  Hs-Source-Dirs:       src
  Build-Depends:        base >=4.8 && <4.9
                      , unix

Test-Suite test-pnotify
  Default-Language:     Haskell2010
  Type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  Hs-Source-Dirs:       test
  Build-Depends:        base >=4.8 && <4.9
                      , pnotify
                      , directory
                      , hspec
                      , QuickCheck
